# py2glsl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_GUIDELINE.md  Makefile  README.md  moderngl.py  moderngl_doc.rst  pyproject.toml  shadertoy.glsl  tmp.py  tmp2.py  xclip
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: architecture_proposal.md
examples/: 001_ray_marching.py  README.md  demo.py  feature_showcase.py  raymarching.py  raymarching_simple.py  russian_doomer.py  shadertoy_example.py  simple_shader.py  syntax_features.py  test_new_target.py
py2glsl/: __init__.py  __main__.py  builtins.py  context.py  decorators.py  main.py  render.py  renderer.py  transpiler.py  types.py
py2glsl/ast/: nodes.py  visitor.py
py2glsl/glsl/: builtins.py  types.py
py2glsl/glsl/tests/: test_builtins.py  test_types.py
py2glsl/render/: __init__.py  animation.py  buffers.py  context.py  program.py  render.py
py2glsl/transpiler/: __init__.py  analyzer.py  ast_parser.py  ast_utils.py  backends.py  code_block.py  code_gen_expr.py  code_gen_stmt.py  code_generator.py  collector.py  constants.py  core.py  emitter.py  errors.py  formatter.py  formatting.py  function_call.py  generator.py  glsl_builder.py  ir.py  ir_analysis.py  ir_builder.py  models.py  operators.py  render.py  target.py  type_checker.py  type_constructors.py  type_mappings.py  type_system.py  type_utils.py  type_validation.py  types.py  utils.py
py2glsl/transpiler/backends/: __init__.py  base.py  models.py  render.py  render_factory.py
py2glsl/transpiler/backends/glsl/: __init__.py  shadertoy.py  shadertoy_render.py  standard.py  standard_render.py
py2glsl/transpiler/core/: __init__.py  ast_processor.py  compatibility.py  interfaces.py
py2glsl/transpiler/render/: __init__.py  opengl.py
py2glsl/transpiler/tests/: test_core.py  test_glsl_builder.py  test_type_system.py
py2glsl/types/: __init__.py  base.py  builtins.py  constructors.py  context.py  conversion.py  errors.py  promotion.py  singletons.py  type_system.py  type_validation.py  validation.py
scripts/: ccw_check.sh
tests/: conftest.py  test_backend_render.py  test_basic.py  test_builtins_runtime.py  test_cli.py  test_gold.py  test_main.py  test_render.py  test_shader.py  test_shader_basic.py  test_shader_complex.py  test_shader_control_flow.py  test_shader_errors.py  test_shader_function.py  test_shader_glsl.py  test_shader_hoisting.py  test_shader_rendering.py  test_shader_types.py  test_shader_uniforms.py  test_shader_variables.py  test_shader_vectors.py  test_shader_vertex.py  test_transpiler.py  test_type_system.py  test_types.py
tests/data/gold/: arrays.yaml  basic.yaml  builtins.yaml  control_flow.yaml  expressions.yaml  functions.yaml  globals.yaml  structs.yaml  targets.yaml  types.yaml  uniforms.yaml
tests/render/: test_buffers.py  test_context.py
tests/shaders/: test_basic_shaders.py  utils.py
tests/transpiler/: conftest.py  test_analyzer.py  test_ast_parser.py  test_ast_utils.py  test_backends.py  test_builtins.py  test_code_gen_expr.py  test_code_gen_stmt.py  test_code_generator.py  test_collector.py  test_constants.py  test_decorators.py  test_emitter.py  test_error_reporting_integration.py  test_errors.py  test_function_ordering.py  test_generator.py  test_ir_analysis.py  test_ir_builder.py  test_line_number_reporting.py  test_models.py  test_russian_doomer_error.py  test_transpiler.py  test_type_checker.py  test_type_constructors.py  test_type_system.py  test_type_utils.py  test_type_validation.py  test_unary_op.py
tests/types/: test_system.py  test_type_constructors.py  test_type_validation.py  test_validation.py
